--- a/ui/src/app/views/projectv2/run-list/run-list.scss
+++ b/ui/src/app/views/projectv2/run-list/run-list.scss
@@ -61,6 +61,18 @@
     flex: 1;
     overflow-y: auto;
 
+    .repoLink {
+      color: inherit;
+
+      &.dotted {
+        text-decoration: underline dotted;
+      }
+
+      &:hover {
+        color: #177ddc;
+      }
+    }
+
     .run-avatar {
       display: flex;
       flex-direction: row;
