feat(api,ui): display job queue v2

--- a/ui/src/app/views/navbar/navbar.html
+++ b/ui/src/app/views/navbar/navbar.html
@@ -244,6 +244,9 @@
                     <li nz-menu-item>
                         <a href="#" [routerLink]="['settings', 'queue']">{{ 'admin_queue_title' | translate }}</a>
                     </li>
+                    <li nz-menu-item>
+                        <a href="#" [routerLink]="['settings', 'queuev2']">Current job V2 queue</a>
+                    </li>
 
                     <li nz-menu-divider></li>
                     <li nz-menu-item>
