refactor(ui): explore sidebar
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/projectv2/explore/vcs/repository/show/project.repository.show.scss
+++ b/ui/src/app/views/projectv2/explore/vcs/repository/show/project.repository.show.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../common.scss';
+@import '../../../../../../../common.scss';
 
 .repoShow {
   display: flex;
@@ -54,9 +54,6 @@
           ul {
               list-style: none;
               padding-left: 0;
-              li {
-
-              }
           }
 
           td {
