--- a/ui/src/app/views/projectv2/explore/explore.html
+++ b/ui/src/app/views/projectv2/explore/explore.html
@@ -1,6 +1,6 @@
 <app-resizable-panel growDirection="after" minSize="250" [initialSize]="panelSize"
 	(onGrabbingStart)="panelStartResize()" (onGrabbingEnd)="panelEndResize($event)">
-	<app-projectv2-sidebar class="sidebar" [project]="project"></app-projectv2-sidebar>
+	<app-projectv2-explore-sidebar class="sidebar" [project]="project"></app-projectv2-explore-sidebar>
 </app-resizable-panel>
 
 <div class="content">
