--- a/ui/src/app/views/projectv2/explore/vcs/repository/workflow/show/project.workflow.show.html
+++ b/ui/src/app/views/projectv2/explore/vcs/repository/workflow/show/project.workflow.show.html
@@ -1,8 +1,6 @@
 <ng-container *ngIf="workflow && !loading">
-    <app-project-workflow-entity [parentType]="'V2Workflow'"
-                                 [workflowSchema]="workflowJsonSchema" [jobSchema]="jobSchema"
-                                 [data]="workflow.data"
-                                 [path]="workflow.file_path"></app-project-workflow-entity>
+    <app-project-workflow-entity [parentType]="'V2Workflow'" [workflowSchema]="workflowJsonSchema"
+        [jobSchema]="jobSchema" [data]="workflow.data" [path]="workflow.file_path"></app-project-workflow-entity>
     <div class="footer">
         <div class="buttons">
             <button nz-button nzType="primary" [nzLoading]="loading" [disabled]="true">
@@ -12,5 +10,5 @@
     </div>
 </ng-container>
 <nz-alert *ngIf="errorNotFound && !loading" nzType="warning"
-          nzDescription="Workflow not found on branch: '{{currentBranch}}'" nzShowIcon></nz-alert>
+    nzDescription="Workflow not found on branch: '{{currentBranch}}'" nzShowIcon></nz-alert>
 <nz-spin *ngIf="loading" nzTip="Loading workflow"></nz-spin>
