--- a/ui/src/app/views/projectv2/explore/explore-sidebar.scss
+++ b/ui/src/app/views/projectv2/explore/explore-sidebar.scss
@@ -5,7 +5,6 @@
     flex-direction: column;
     background-color: #ffffff0a;
     overflow: hidden;
-
 }
 
 .header {
@@ -47,7 +46,7 @@
 }
 
 .tree-node-header {
-    height: 32px;
+    height: 26px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -59,13 +58,25 @@
     color: inherit;
     overflow: hidden;
 
+    &.large {
+        height: 32px;
+
+        .name {
+            line-height: 32px;
+        }
+    }
+
     .name {
         flex: 1;
         padding: 0 5px;
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
-        line-height: 32px;
+        line-height: 26px;
+
+        [nz-icon] {
+            margin-right: 5px;
+        }
     }
 
     a {
@@ -98,4 +109,24 @@
 .tree-node-content {
     display: flex;
     flex-direction: column;
+    margin-left: 10px;
+    border-left: 2px dotted #f5f5f5;
+
+    :host-context(.night) & {
+        border-color: rgba(255, 255, 255, 0.08);
+    }
+
+    nz-alert {
+        margin:10px;
+    }
+
+    &:has(~ .tree-node-header) {
+        margin-bottom: 3px;
+    }
+
+    &.large {
+        &:has(~ .tree-node-header) {
+            margin-bottom: 5px;
+        }
+    }
 }
